# orai

./: .clang-format  .gitignore  ARCHITECHTURE.md  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: Shell.cpp  Shell.h  Statement.cpp  Statement.h  main.cpp
src/Commands/: ConPty.ixx  ExecutionEngine.cpp  ExecutionEngine.h
src/Compiler/: Lexer.cpp  Lexer.h
src/Persistance/: DbContext.cpp  DbContext.h
src/Plugins/Kubernetes/: Porting.cpp  Porting.h
src/UI/: App.cpp  App.h
src/UI/Components/: Command.cpp  Command.h  Component.cpp  Component.h  Input.cpp  Input.h  Output.cpp  Output.h  Scrollable.cpp  Scrollable.h  Text.cpp  Text.h  TextList.cpp  TextList.h
src/UI/Graphics/: View.cpp  View.h  ViewPort.cpp  ViewPort.h
src/UI/Utils/: InputUtils.cpp  InputUtils.h
src/Utils/: StringUtils.ixx
tests/: InputUtils_Tests.cpp
